<resources>
    <string name="app_name">FridgeHelper</string>

    <!-- Common text-->
    <string name="logIn">LogIn</string>
    <string name="register">Register</string>
    <string name="select_product_image">Select product image</string>
    <string name="title_activity_map">Map</string>
    <string name="product_image_placeholder">Product Image</string>
    <string name="product_name_placeholder">Product Name</string>
    <string name="product_price_placeholder">Product Price</string>

    <!-- Hints -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_productName">Name</string>
    <string name="hint_productPrice">ej: 3€/u, 10€/kg…</string>
    <string name="hint_quantity">Quantity</string>

    <!-- Snackbar's messages -->
    <string name="welcome">Welcome</string>
    <string name="failedRegistration">Registration Failed</string>
    <string name="passwords_do_not_match">The passwords do not match</string>
    <string name="logIn_failure">LogIn Failure</string>
    <string name="enter_name">Please enter a name</string>
    <string name="confirm_delete">Please press Delete again to confirm and delete the product</string>

    <!-- Menu's titles-->
    <string name="menu_addProduct">Add</string>
    <string name="menu_cancelProduct">Cancel</string>
    <string name="menu_deleteProduct">Delete</string>
    <string name="menu_map">Map</string>

    <!-- Button's texts-->
    <string name="button_addProduct">Add Product</string>
    <string name="button_editProduct">Edit Product</string>
    <string name="button_addImage">Add Image </string>
    <string name="button_updateImage">Update Image </string>
    <string name="button_location">Set Best Location</string>


</resources>