<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LogInActivity"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <EditText
        android:id="@+id/logIn_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/basic_margin"
        android:hint="@string/hint_email"
        />

    <EditText
        android:id="@+id/logIn_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/basic_margin"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        />

    <Button
        android:id="@+id/logIn_logInbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/logIn"
        android:layout_margin="@dimen/basic_margin"
        />

    <Button
        android:id="@+id/logIn_registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/register"
        android:layout_margin="@dimen/basic_margin"
        />


</LinearLayout>